# vkfft-rs

./: .gitmodules  Cargo.toml
crates/vkfft-sys/: Cargo.toml  build.rs  wrapper.c  wrapper.cpp  wrapper.h
crates/vkfft-sys/src/: lib.rs
src/: app.rs  config.rs  lib.rs  version.rs
