[package]
name = "vkfft"
version = "0.2.0"
authors = ["Semio AI, Inc."]
edition = "2018"
resolver = "2"
license = "BSD-3-Clause"
description = "Rust bindings for VkFFT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vkfft-sys = { path = "./crates/vkfft-sys", version = "0.2.0" }
vulkano = "0.34.1"
derive_more = "0.99"


[dev-dependencies]
util = { path = "./crates/util" }
smallvec = "1.6"
